test/corpus/compartment.txt
====
compartment config
====
{
  "compartments_configuration": {
    "enable_delete": true,
    "compartments": {
      "CMP-NETWORK-KEY": {
        "name": "cmp-network",
        "description": "oci-learn-lz Shared Network Compartment"
      }
    }
  }
}
---

(document
  (compartmentConfiguration)
  (compartmentConfigurationObject
    (enableDelete)
    enable_delete: (bool
      (true))
    (compartments)
    (compartmentsObj
      (id
        (string
          (string_content)))
      (compartment
        (name)
        name: (string
          (string_content))
        (description)
        description: (string
          (string_content))))))

===
compartment with children compartment
===
{
  "compartments_configuration": {
    "enable_delete": true,
    "compartments": {
      "CMP-CHANNELS-KEY": {
        "name": "cmp-channels",
        "description": "oci-learn-lz Channels Domain dedicated Compartment",
        "children": {
          "CMP-CHANNELS-NETWORK-KEY": {
            "name": "cmp-channels-network",
            "description": "oci-learn-lz Channels domain shared networking compartment within the domain"
          },
          "CMP-CHANNELS-NONPROD-KEY": {
            "name": "cmp-channels-nonprod",
            "description": "oci-learn-lz Channels domain for non-prod environment compartment"
          },
          "CMP-CHANNELS-PROD-KEY": {
            "name": "cmp-channels-prod",
            "description": "oci-learn-lz Channels domain for prod environment compartment"
          }
        }
      }
    }
  }
}
---

(document
  (compartmentConfiguration)
  (compartmentConfigurationObject
    (enableDelete)
    enable_delete: (bool
      (true))
    (compartments)
    (compartmentsObj
      (id
        (string
          (string_content)))
      (compartment
        (name)
        name: (string
          (string_content))
        (description)
        description: (string
          (string_content))
        (children)
        (compartmentsObj
          (id
            (string
              (string_content)))
          (compartment
            (name)
            name: (string
              (string_content))
            (description)
            description: (string
              (string_content)))
          (id
            (string
              (string_content)))
          (compartment
            (name)
            name: (string
              (string_content))
            (description)
            description: (string
              (string_content)))
          (id
            (string
              (string_content)))
          (compartment
            (name)
            name: (string
              (string_content))
            (description)
            description: (string
              (string_content))))))))
